<resources>
    <string name="app_name">homework_20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="number_of_users">number of users:</string>
    <string name="_0">0</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
    <string name="enter_all_field">* Enter All Field</string>
    <string name="incorrect_email_type">* Incorrect Email Type</string>
</resources>