<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".presentation.screen.MainFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_border_white"
        android:hint="@string/email"
        android:lines="1"
        android:paddingStart="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_border_white"
        android:hint="@string/first_name"
        android:lines="1"
        android:paddingStart="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_border_white"
        android:hint="@string/last_name"
        android:lines="1"
        android:paddingStart="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_border_white"
        android:hint="@string/age"
        android:inputType="number"
        android:lines="1"
        android:paddingStart="25dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/enter_all_field"
        android:textColor="@color/design_default_color_error"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/incorrect_email_type"
        android:textColor="@color/design_default_color_error"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_users"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_0"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddUser"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_user"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRemoveUser"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/remove_user"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdateUser"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/update_user"/>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>